fixed a bug and added a para of useless text

--- a/templates/templates/templates/template_list.html
+++ b/templates/templates/templates/template_list.html
@@ -6,6 +6,10 @@
     <div class="container">
 
         <h3 id="show-datamap-table">Templates</h3>
+        <div class="container">
+            <p>These are blank templates that are intended to be populated using a datamap and existing data in the system. To do that
+                you need to create a <a href="#">pipeline.</a></p> 
+        </div>
         <table class="table table-hover">
             <thead>
                 <th scope="col">Template name</th>
