wip: fixing the login page

--- a/dbasik/core/templates/core/base.html
+++ b/dbasik/core/templates/core/base.html
@@ -22,7 +22,7 @@
                     aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'dashboard' %}"><img style="max-width: 96px; margin-top: -7px;" src="{% static 'img/bw_logo.png' %}"></a>
+            <a class="navbar-brand" href="{% url 'dashboard' %}">Home</a>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
