--- a/dbasik/core/templates/core/dashboard.html
+++ b/dbasik/core/templates/core/dashboard.html
@@ -5,6 +5,6 @@
 {% block content %}
 
     <h1>Dashboard for {{ request.user }}</h1>
-    <p>Welcome to your dashboard.</p>
+    <p>Welcome to your dashboard!</p>
 
 {% endblock %}
