--- a/dbasik/core/templates/registration/login.html
+++ b/dbasik/core/templates/registration/login.html
@@ -1,41 +1,43 @@
 {% extends "core/base.html" %}
-{% load staticfiles %}
-{% load crispy_forms_tags %}
-
-{% block title %}dbasik | Log in{% endblock %}
-
-{% block extra_head_tags %}
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="{% static 'css/signin.css' %}" type="text/css">
-    <link href="{% static 'css/signin.css' %}" rel="stylesheet">
-{% endblock %}
-
-{% block body_class %}text-center{% endblock %}
-
-{% block bootstrap-navbar %}{% endblock %}
 
 {% block content %}
 
+<div class="container">
+  {% if form.errors %}
+  <p>Your username and password didn't match. Please try again.</p>
+  {% endif %}
 
-    <body class="text-center">
-      <form class="form-signin" action="{% url 'login' %}" method="post" accept-charset="utf-8">
-        {% csrf_token %} 
-        <img class="mb-4" src="{% static 'img/bw_logo.png' %}" alt="" width="172" height="172">
-        {% if next %}
-            <div id="message-test" class="alert alert-danger">
-                <p class="text-center"><strong>You are not permitted to access that page.</strong></p>
-            </div>
-        {% endif %}
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="inputEmail" class="sr-only">Username</label>
-        <label for="inputPassword" class="sr-only">Password</label>
-        {{ form|crispy }}
-        <input type="hidden" value="{{ next }}" name="next" id="next"/>
-        <div class="checkbox mb-3">
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <p class="mt-5 mb-3 text-muted">&copy; 2019</p>
-      </form>
-    </body>
+  {% if next %}
+      {% if user.is_authenticated %}
+      <p>Your account doesn't have access to this page. To proceed,
+      please login with an account that has access.</p>
+      {% else %}
+      <p>Please login to see this page.</p>
+      {% endif %}
+  {% endif %}
 
-{% endblock %}
+  <form method="post" action="{% url 'login' %}">
+  {% csrf_token %}
+  <div class="form-group">
+      {{ form.username.label_tag }}
+      {{ form.username }}
+  </div>
+
+  <div class="form-group">
+      {{ form.password.label_tag }}
+      {{ form.password }}
+  </div>
+
+  <div class="form-group">
+    <button type="submit" class="btn btn-primary" value="login">Log In</button>
+  </div>
+  <input type="hidden" name="next" value="{{ next }}">
+  </form>
+
+  <div class="form-group">
+    {# Assumes you set up the password_reset view in your URLconf #}
+      <a href="{% url 'password_reset' %}">Lost password?</a>
+  </div>
+
+  {% endblock %}
+</div>
