--- a/dbasik/core/templates/core/profile.html
+++ b/dbasik/core/templates/core/profile.html
@@ -4,11 +4,13 @@
 
 {% block content %}
 
+<div class="container">
     {% block body %}
         <h1>Profile for {{ user }}</h1>
         <p>First name: {{ user.first_name }}</p>
         <p>Last name: {{ user.last_name }}</p>
         <p>Email: {{ user.email }}</p>
     {% endblock %}
-
 {% endblock %}
+</div>
+
