wip: fixing core links

--- a/dbasik/core/templates/core/dashboard.html
+++ b/dbasik/core/templates/core/dashboard.html
@@ -4,7 +4,9 @@
 
 {% block content %}
 
+<div class="container">
     <h1>Dashboard for {{ request.user }}</h1>
     <p>Welcome to your dashboard!</p>
+</div>
 
 {% endblock %}
