--- a/dbasik/core/templates/core/index.html
+++ b/dbasik/core/templates/core/index.html
@@ -1,8 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-   <head>
-       <meta charset="utf-8">
-       <title>dbasik index page</title>
-   </head> 
-<h1>This is the index page for dbasik application</h1>
-</html>
+{% extends "core/base.html" %}
+
+{% block title %}dbasik home page{% endblock %}
+
+{% block content %}
+
+<div class="container">
+    <h1>This is the home page for dbasik</h1>
+</div>
+
+{% endblock %}
