--- a/dbasik/core/templates/core/base.html
+++ b/dbasik/core/templates/core/base.html
@@ -22,7 +22,7 @@
                     aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'dashboard' %}">Home</a>
+            <a class="navbar-brand" href="{% url 'index' %}">Home</a>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
@@ -62,7 +62,7 @@
                 <ul class="nav justify-content-end">
 
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="{% url 'dashboard' %}">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link text-light" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-light" href="{% url 'dashboard' %}">About</a>
@@ -71,7 +71,7 @@
                         <li class="nav-item">
                             {# URL provided by django-allauth/account/urls.py #}
                             {#<a class="nav-link" href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a>#}
-                            <a class="nav-link text-light" href="#">{{ user }}</a>
+                            <a class="nav-link text-light" href="{% url 'dashboard' %}">{{ user }}</a>
                         </li>
                         <li class="nav-item">
                             {# URL provided by django-allauth/account/urls.py #}
