wip: sorting out the css

--- a/dbasik/core/templates/core/base.html
+++ b/dbasik/core/templates/core/base.html
@@ -3,100 +3,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="{% static 'core/site.css' %}"/>
-    <link rel="stylesheet" href="{% static 'core/nav.css' %}"/>
-
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-{#    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">#}
+    <link rel="stylesheet" href="{% static 'core/site.css' %}"/>
+    <link rel="stylesheet" href="{% static 'core/nav.css' %}"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:400,700' rel='stylesheet' type='text/css'/>
     <title>{% block title %}{% endblock %}</title>
     {% block extra_head_tags %}{% endblock %}
 </head>
 
-{% block bootstrap-navbar %}
-
-    <div class="m-b-1">
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="margin-bottom: 24px">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="{% url 'index' %}">Home</a>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Portfolio
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="{% url 'datamaps:datamap_list' %}">Datamaps</a>
-                            <a class="dropdown-item" href="{% url 'templates:list' %}">Templates</a>
-                            <a class="dropdown-item" href="{% url 'returns:returns_list' %}">Returns</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </li>
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Project Register
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="{% url 'register:project_list' %}">Projects</a>
-                            <a class="dropdown-item" href="{% url 'register:projecttype_list' %}">Project Types</a>
-                            <a class="dropdown-item" href="{% url 'register:tier_list' %}">Tiers</a>
-                            <a class="dropdown-item" href="{% url 'register:projectstage_list' %}">Project Stages</a>
-                            <a class="dropdown-item" href="{% url 'register:strategicalignment_list' %}">Strategic
-                                Alignments</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </li>
-                </ul>
-
-                <ul class="nav justify-content-end">
-
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="{% url 'dashboard' %}">About</a>
-                    </li>
-                    {% if request.user.is_authenticated %}
-                        <li class="nav-item">
-                            {# URL provided by django-allauth/account/urls.py #}
-                            {#<a class="nav-link" href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a>#}
-                            <a class="nav-link text-light" href="{% url 'dashboard' %}">{{ user }}</a>
-                        </li>
-                        <li class="nav-item">
-                            {# URL provided by django-allauth/account/urls.py #}
-                            <a class="nav-link text-light" href="{% url 'logout' %}">{% trans "Sign Out" %}</a>
-                        </li>
-                    {% else %}
-                        <li class="nav-item">
-                            {# URL provided by django-allauth/account/urls.py #}
-                            <a id="sign-up-link text-light" class="nav-link"
-                               href="#">{% trans "Sign Up" %}</a>
-                        </li>
-                        <li class="nav-item">
-                            {# URL provided by django-allauth/account/urls.py #}
-                            <a id="log-in-link" class="nav-link"
-                               href="{% url 'login' %}">{% trans "Sign In" %}</a>
-                        </li>
-                    {% endif %}
-                </ul>
-            </div>
-        </nav>
+<nav class="crumbs">
+    <!-- <ol> -->
+    <!--     <li class="crumb"><a href="{% url 'index' %}">Home</a></li> -->
+    <!--     <li class="crumb"><a href="{% url 'register:project_list' %}">Projects</a></li> -->
+    <!-- </ol> -->
+    <div class="title">
+      dbasik
     </div>
+    <div>
+        {% if is_logged_in %}
+            <a href="/account">Account</a>
+            <a href="/account/logout">Log Out</a>
+        {% else %}
+            <a href="/account/login">Log In</a>
+            <a href="/account/register">Register</a>
+        {% endif %}
+    </div>
+</nav>
 
+
+
+{% block navbar %}
+<!-- The sidebar -->
+<div class="sidebar">
+  <ul>
+    <li><a href="{% url 'index'  %}">Home</a></li>
+    <li><a href="{% url 'datamaps:datamap_list'  %}">Datamaps</a></li>
+    <li><a href="{% url 'register:project_list'  %}">Projects</a></li>
+    <li><a href="#about">About</a>
+  </ul>
+</div>
 {% endblock %}
-
-
 
 <div class="content">
     {% block content %}
