--- a/dbasik/register/templates/register/project_list.html
+++ b/dbasik/register/templates/register/project_list.html
@@ -3,35 +3,31 @@
 {% block title %}List of Projects{% endblock %}
 
 {% block content %}
-<div class="container">
-    <h3>Projects</h3>
-    <div class="container">
-        <p>List of projects in the system.</p>
-        <table class="table table-hover">
-            <tr>
-                <th scope="col">Project</th>
-                <th scope="col">Tier</th>
-                <th scope="col">Type</th>
-                <th scope="col">Stage</th>
-                <th scope="col">Start Date</th>
-                <th scope="col">Planned End Date</th>
-            </tr>
-            {% for item in object_list %}
-            <tr>
-                <td><a href="{% url "register:project_detail" item.slug %}">{{ item }}</a></td>
-                <td>{{ item.tier }}</td>
-                <td>{{ item.project_type }}</td>
-                <td>{{ item.stage}}</td>
-                <td>{{ item.start_date|date:"j M Y" }}</td>
-                <td>{{ item.planned_end_date|date:"j M Y" }}</td>
-            </tr>
-            {% endfor %}
+<h3>Projects</h3>
+<p>List of projects in the system.</p>
+<table>
+    <tr>
+        <th scope="col">Project</th>
+        <th scope="col">Tier</th>
+        <th scope="col">Type</th>
+        <th scope="col">Stage</th>
+        <th scope="col">Start Date</th>
+        <th scope="col">Planned End Date</th>
+    </tr>
+    {% for item in object_list %}
+    <tr>
+        <td><a href="{% url "register:project_detail" item.slug %}">{{ item }}</a></td>
+        <td>{{ item.tier }}</td>
+        <td>{{ item.project_type }}</td>
+        <td>{{ item.stage}}</td>
+        <td>{{ item.start_date|date:"j M Y" }}</td>
+        <td>{{ item.planned_end_date|date:"j M Y" }}</td>
+    </tr>
+    {% endfor %}
 
-        </table>
-        <div class="buttonHolder">
-            <a class="btn btn-primary" href="{% url 'register:project_create' %}">Create New Project</a>
-        </div>
-    </div>
+</table>
+<div class="buttonHolder">
+    <a class="button" href="{% url 'register:project_create' %}">Create New Project</a>
 </div>
 
 {% endblock %}
