--- a/dbasik/datamap/templates/datamap/datamap_detail.html
+++ b/dbasik/datamap/templates/datamap/datamap_detail.html
@@ -26,14 +26,14 @@
             <table>
                 <thead>
                     <tr>
-                        <th scope="col" class="col-sm-3">Key</th>
-                        <th scope="col" class="col-sm-1">Data Type</th>
-                        <th scope="col" class="col-sm-1">Max Length</th>
-                        <th scope="col" class="col-sm-1">Required</th>
-                        <th scope="col" class="col-sm-1">Sheet</th>
-                        <th scope="col" class="col-sm-1">Cell Reference</th>
-                        <th scope="col" class="col-sm-1"></th>
-                        <th scope="col" class="col-sm-1"></th>
+                        <th>Key</th>
+                        <th>Data Type</th>
+                        <th>Max Length</th>
+                        <th>Required</th>
+                        <th>Sheet</th>
+                        <th>Cell Reference</th>
+                        <th></th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
