--- a/dbasik/core/templates/core/base.html
+++ b/dbasik/core/templates/core/base.html
@@ -5,30 +5,23 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="{% static 'core/site.css' %}"/>
-    <link rel="stylesheet" href="{% static 'core/nav.css' %}"/>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:400,700' rel='stylesheet' type='text/css'/>
+    <link rel="stylesheet" href="{% static 'core/site.css' %}"/>
+    <link rel="stylesheet" href="{% static 'core/nav.css' %}"/>
     <title>{% block title %}{% endblock %}</title>
     {% block extra_head_tags %}{% endblock %}
 </head>
 
-<nav class="crumbs">
-    <!-- <ol> -->
-    <!--     <li class="crumb"><a href="{% url 'index' %}">Home</a></li> -->
-    <!--     <li class="crumb"><a href="{% url 'register:project_list' %}">Projects</a></li> -->
-    <!-- </ol> -->
-    <div class="title">
-      dbasik
-    </div>
-    <div style="text-align: right">
-        {% if request.user.is_authenticated %}
-        <a href="#">{{ user }}</a>
-            <a href="{% url 'logout' %}">Log Out</a>
-        {% else %}
-        <a href="{% url 'login' %}">Log In</a>
-        {% endif %}
-    </div>
+<nav class="w3-bar w3-teal w3-padding-16">
+  <a href="{% url 'index' %}" class="w3-bar-item w3-xxlarge">dbasik</a>
+      {% if request.user.is_authenticated %}
+          <a class="w3-bar-item" href="#">{{ user }}</a>
+          <a class="w3-bar-item" href="{% url 'logout' %}">Log Out</a>
+      {% else %}
+          <a class="w3-bar-item" href="{% url 'login' %}">Log In</a>
+      {% endif %}
 </nav>
 
 
@@ -37,7 +30,6 @@
 <!-- The sidebar -->
 <div class="sidebar">
   <ul>
-    <li><a href="{% url 'dashboard'  %}">Home</a></li>
     <li><a href="{% url 'datamaps:datamap_list'  %}">Datamaps</a></li>
     <li><a href="{% url 'register:project_list'  %}">Projects</a></li>
     <li><a href="{% url 'returns:returns_list'  %}">Returns</a></li>
@@ -45,9 +37,8 @@
   </ul>
 </div>
 {% endblock %}
-
-<div class="content">
-    {% block content %}
-    {% endblock %}
-</div>
+  <div style="margin-left:20%;">
+      {% block content %}
+      {% endblock %}
+  </div>
 </html>
