--- a/dbasik/core/templates/registration/login.html
+++ b/dbasik/core/templates/registration/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="container">
+<div class="w3-container">
   {% if form.errors %}
   <p>Your username and password didn't match. Please try again.</p>
   {% endif %}
