--- a/dbasik/datamap/templates/datamap/datamap_detail.html
+++ b/dbasik/datamap/templates/datamap/datamap_detail.html
@@ -4,67 +4,70 @@
 
 {% block content %}
 
-
-        <div>
-            <p><strong>WARNING:</strong> The <strong>Data Type</strong>, <strong>Max Length</strong> and <strong>Required</strong> fields are not currently 
-                implemented. They will be in a future verison.</p>
-        </div>
-            <div>
-                {% if messages %}
-                    <ul>
-                        {% for message in messages %}
-                            <div id="message-test" class="alert alert-dismissible alert-danger">
-                                {{ message }}
-                            </div>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
+<div class="w3-container">
+    <div>
+        <p><strong>WARNING:</strong> The <strong>Data Type</strong>, <strong>Max Length</strong> and <strong>Required</strong> fields are not currently 
+            implemented. They will be in a future verison.</p>
+    </div>
+    <div>
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <div id="message-test" class="alert alert-dismissible alert-danger">
+                {{ message }}
             </div>
-
-
-            <h3>{{ dm_name }} </h3>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Key</th>
-                        <th>Data Type</th>
-                        <th>Max Length</th>
-                        <th>Required</th>
-                        <th>Sheet</th>
-                        <th>Cell Reference</th>
-                        <th></th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for line in dm_lines %}
-                        <tr>
-                            <td><a href="{% url 'datamaps:datamapline_update' line.id %}" id="key-cell">{{ line.key }}</a></td>
-                            <td>{{ line.data_type }}</td>
-                            <td>{{ line.max_length }}</td>
-                            <td>{{ line.required }}</td>
-                            <td>{{ line.sheet }}</td>
-                            <td>{{ line.cell_ref }}</td>
-                            <td class="text-right">
-                                <a class="btn btn-primary mx-1 px-1" href="{% url 'datamaps:datamapline_update' line.id %}">Edit</a>
-                            </td>
-                            <td class="text-right">
-                                <a class="btn btn-danger mx-1 px-1" href="{% url 'datamaps:datamapline_delete' line.id %}">DELETE</a>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-
-
-
-        <div class="buttonHolder">
-            <a class="button" id="add-line-to-datamap-button"  href="{% url 'datamaps:datamapline-create' dm.slug %}">Add line to this datamap</a>
-            <a class="button" id="edit-datamap-button" href="{% url 'datamaps:datamap_update' dm.slug %}">Edit</a>
-            <a class="button" id="upload-csv-button" href="{% url 'datamaps:uploaddatamap' dm.slug %}">Upload CSV</a>
-            <a class="button" id="delete-datamap-button" href="{% url 'datamaps:datamap_delete' dm.slug %}">Delete this datamap</a>
-        </div>
+            {% endfor %}
+        </ul>
+        {% endif %}
     </div>
+
+
+    <h3>{{ dm_name }} </h3>
+    <table class="w3-table-all">
+        <thead>
+            <tr>
+                <th>Key</th>
+                <th>Data Type</th>
+                <th>Max Length</th>
+                <th>Required</th>
+                <th>Sheet</th>
+                <th>Cell Reference</th>
+                <th></th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for line in dm_lines %}
+            <tr>
+                <td><a href="{% url 'datamaps:datamapline_update' line.id %}" id="key-cell">{{ line.key }}</a></td>
+                <td>{{ line.data_type }}</td>
+                <td>{{ line.max_length }}</td>
+                <td>{{ line.required }}</td>
+                <td>{{ line.sheet }}</td>
+                <td>{{ line.cell_ref }}</td>
+                <td class="text-right">
+                    <a class="btn btn-primary mx-1 px-1" href="{% url 'datamaps:datamapline_update' line.id %}">Edit</a>
+                </td>
+                <td class="text-right">
+                    <a class="btn btn-danger mx-1 px-1" href="{% url 'datamaps:datamapline_delete' line.id %}">DELETE</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+
+
+    <div class="buttonHolder">
+        <a class="button" id="add-line-to-datamap-button"  href="{% url 'datamaps:datamapline-create' dm.slug %}">Add line to this datamap</a>
+        <a class="button" id="edit-datamap-button" href="{% url 'datamaps:datamap_update' dm.slug %}">Edit</a>
+        <a class="button" id="upload-csv-button" href="{% url 'datamaps:uploaddatamap' dm.slug %}">Upload CSV</a>
+        <a class="button" id="delete-datamap-button" href="{% url 'datamaps:datamap_delete' dm.slug %}">Delete this datamap</a>
     </div>
+</div>
+</div>
+
+</div>
+
 
 {% endblock %}
