--- a/dbasik/datamap/templates/datamap/datamap_list.html
+++ b/dbasik/datamap/templates/datamap/datamap_list.html
@@ -4,10 +4,11 @@
 
 {% block content %}
 
-<div class="container">
+<div class="w3-container">
 
-    <h3 id="show-datamap-table">Datamaps</h3>
-    <table class="table table-hover">
+    <h2>Datamaps</h2>
+    <div class="w3-panel w3-border"><p>{% lorem %}</p></div>
+    <table class="w3-table-all">
         <thead>
             <tr>
                 <th scope="col">Datamap name</th>
@@ -22,15 +23,15 @@
             <td id="datamap-title"><a href="{% url 'datamaps:datamap_detail' datamap.slug %}">{{ datamap.name }}</a></td>
             <td> {{ datamap.tier }} </td>
             <td> {{ datamap.active }} </td>
-            <td> <a class="btn btn-danger" href="{% url 'datamaps:datamap_delete' datamap.slug %}">DELETE</a></td>
+            <td> <a class="w3-text-red" href="{% url 'datamaps:datamap_delete' datamap.slug %}">DELETE</a></td>
         </tr>
         {% endfor %}
         {% else %}
         <td>There are no datamaps.</td>
         {% endif %}
     </table>
-    <div class="container">
-        <a class="btn btn-primary" href="{% url 'datamaps:datamap-create' %}">Create a datamap</a>
+    <div style="margin-top: 10px;">
+        <a class="w3-button w3-green" href="{% url 'datamaps:datamap-create' %}">Create a datamap</a>
     </div>
 </div>
 
