--- a/dbasik/register/templates/register/project_list.html
+++ b/dbasik/register/templates/register/project_list.html
@@ -3,27 +3,24 @@
 {% block title %}List of Projects{% endblock %}
 
 {% block content %}
-<h3>Projects</h3>
-<p>List of projects in the system.</p>
+<div class="w3-container">
+  <h2>Projects</h2>
 
-{% for item in object_list %}
-    <ul>
-      <li>
-        <div>
-        <a href="{% url "register:project_detail" item.slug %}">{{ item }}</a>
-        ({{ item.tier }}
-        {{ item.project_type }}
-        {{ item.stage}}
-        {{ item.start_date|date:"j M Y" }}
-        {{ item.planned_end_date|date:"j M Y" }})
-        </div>
-      </li>  
-    </ul>
-{% endfor %}
+  <div class="w3-panel w3-border"><p>{% lorem %}</p></div>
 
-</table>
-<div class="buttonHolder">
-    <a class="button" href="{% url 'register:project_create' %}">Create New Project</a>
+  {% for tier, projects in p_per_tier %}
+  <ul class="w3-ul">
+    <li class="w3-padding-small w3-border-teal"><h4>{{ tier.name }}</h4></li>
+    {% for p in projects %}
+    <li>
+      <a href="{% url "register:project_detail" p.slug %}">{{ p.name}}</a>
+    </li> 
+    {% endfor %}
+  </ul>
+  {% endfor %}
+
+  <div style="margin-top: 10px;">
+    <a class="w3-button w3-green" href="{% url 'register:project_create' %}">Create New Project</a>
+  </div>
 </div>
-
 {% endblock %}
