--- a/dbasik/returns/templates/returns/returns_list.html
+++ b/dbasik/returns/templates/returns/returns_list.html
@@ -12,43 +12,45 @@
 </ul>
 {% endif %}
 
+<div class="w3-container">
+    <div class="w3-panel w3-border">
+        <p><strong>NOTE:</strong> Return templates may be uploaded <strong>individually</strong> or as a <strong>batch</strong> (batch upload).  If using batch upload,
+            the file name must match exactly the name of the project it corresponds with.</p>
 
-<div>
-    <p><strong>NOTE:</strong> Return templates may be uploaded <strong>individually</strong> or as a <strong>batch</strong> (batch upload).  If using batch upload,
-        the file name must match exactly the name of the project it corresponds with.</p>
-
-    e.g. the file for East Coast Mainline Programme must be called <code class="text-white">East Coast Mainline Programme.xlsm</code>.
-    Any files that are included in the batch which do not match a current project name in the system will be ignored. Errors will be 
-    reported when uploading individually.
-</div>
-<hr>
-{% if valid_fqs %}
+        e.g. the file for East Coast Mainline Programme must be called <code class="text-white">East Coast Mainline Programme.xlsm</code>.
+        Any files that are included in the batch which do not match a current project name in the system will be ignored. Errors will be 
+        reported when uploading individually.
+    </div>
+    <hr>
+    {% if valid_fqs %}
     <h3>Current returns in system:</h3>
-{% for fq in valid_fqs %}
+    {% for fq in valid_fqs %}
 
     <div>
         <h4>{{ fq }}</h4>
 
         <ul>
-        {% for r in object_list %}
+            {% for r in object_list %}
             {% if r.financial_quarter == fq %}
-                <li>
-                    {% if r.return_returnitems.count < 1 %}
-                        <a href="{% url "returns:return_data" r.pk %}">{{ r }}</a>
-                        <span><i></i>Check errors/progress</span>
-                        <a href="{% url "returns:return_delete" r.pk %}">Delete</a>
-                    {% else %}
-                        <a href="{% url "returns:return_data" r.pk %}">{{ r }}</a>
-                        <span>[{{ r.return_returnitems.count }} rows]</span>
-                        <a href="{% url "returns:return_delete" r.pk %}">Delete</a>
-                    {% endif %}
-                </li>
+            <li>
+                {% if r.return_returnitems.count < 1 %}
+                <a href="{% url "returns:return_data" r.pk %}">{{ r }}</a>
+                <span><i></i>Check errors/progress</span>
+                <a href="{% url "returns:return_delete" r.pk %}">Delete</a>
+                {% else %}
+                <a href="{% url "returns:return_data" r.pk %}">{{ r }}</a>
+                <span>[{{ r.return_returnitems.count }} rows]</span>
+                <a href="{% url "returns:return_delete" r.pk %}">Delete</a>
+                {% endif %}
+            </li>
             {% endif %}
-        {% endfor %}
+            {% endfor %}
         </ul>
         <a href="{% url "returns:download_master" fq.id %}" class="button">Download Master for {{ fq }}</a>
         <hr>
     </div>
+
+</div>
 
 {% endfor %}
 {% else %}
